--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^6.1.6",
     "axios": "^1.7.7",
+    "frontend": "file:",
     "next": "^15.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
